--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "VAJIRA-MD",
+  "name": "Cammando",
   "description": "VAJIRA-MD has been designed to make things easier and fun while using WhatsApp. 👨‍💻",
   "logo": "https://telegra.ph/file/235d945df230d71f246b6.jpg",
   "keywords": ["vajiramd", "bot", "whatsapp bot", "multi device", "vajira-md"],
@@ -9,7 +9,7 @@
     "SESSION_ID": {
             "description": "Type the Session-ID you got from scaning QR",
             "required": true,
-            "value": "put session id here"
+            "value": "VAJIRA-MD=jJ8mkQzT#CxUeDVEP4MgOpUBFVJjF66_Hj1DQkxmQbZqpxeK_tIU"
         },
     "COMMAND_TYPE": {
             "description": "Put here (button or nonbutton) to change bot command mode",
@@ -19,7 +19,7 @@
     "OWNER_NUMBER": {
             "description": "Put here your number without +",
             "required": true,
-            "value": "947xxxxxxxx"
+            "value": "447341776968"
         },
     "POSTGRESQL_URL": {
             "description": "Put here postgresql url",
